manifests/bookinfo/httproute-productpage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: bookinfo

spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: bookinfo-gw
    namespace: bookinfo
  rules:
  - backendRefs:
    - name: productpage
      port: 9080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
